fix scroll bar on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,7 +9,6 @@
 body {
   background-color: black;
   color: white;
-  font-family: Arial, sans-serif;
   min-height: 100vh;
   display: flex;
   justify-content: center;
@@ -28,11 +27,11 @@ body {
 
 body::before {
   content: '';
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-image: url('../images/bg.jpg');
   background-size: cover;
   background-position: center center;
